--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/ChenLWNew/chenlw-btn-demo/issues"
   },
-  "homepage": "https://github.com/ChenLWNew/chenlw-btn-demo#readme"
+  "homepage": "https://github.com/ChenLWNew/chenlw-btn-demo#readme",
+  "dependencies": {
+    "vue": "^2.6.11"
+  }
 }
