--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chenlw-demo",
   "version": "1.0.0",
-  "description": "作者：陈良伟",
+  "description": "a vue ui -btn",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
