安装chai第三方测试库

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ChenLWNew/chenlw-btn-demo#readme",
   "dependencies": {
+    "chai": "^4.2.0",
     "vue": "^2.6.11",
     "vue-hot-reload-api": "^2.3.4"
   },
@@ -29,6 +30,6 @@
     "vue-template-compiler": "^2.6.11"
   },
   "alias": {
-    "vue" : "./node_modules/vue/dist/vue.common.js"
+    "vue": "./node_modules/vue/dist/vue.common.js"
   }
 }
