--- a/package.json
+++ b/package.json
@@ -26,8 +26,17 @@
   "devDependencies": {
     "@vue/component-compiler-utils": "^3.1.2",
     "chai-spies": "^1.0.0",
+    "karma": "^5.0.2",
+    "karma-chai": "^0.1.0",
+    "karma-chai-spies": "^0.1.4",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-mocha": "^2.0.0",
+    "karma-sinon-chai": "^2.0.2",
+    "mocha": "^7.1.1",
     "parcel-bundler": "^1.12.4",
     "sass": "^1.26.3",
+    "sinon": "^9.0.2",
+    "sinon-chai": "^3.5.0",
     "vue-template-compiler": "^2.6.11"
   },
   "alias": {
