--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chenlw-demo-test-1-1",
+  "name": "chenlw-demo-1-1",
   "version": "0.0.1",
   "description": "a vue ui -btn",
   "main": "index.js",
